--- a/ReverseWords/Makefile
+++ b/ReverseWords/Makefile
@@ -1,6 +1,9 @@
 include $(GOROOT)/src/Make.inc
 
 TARG=ReverseWords
-GOFILES=ReverseWords.go
+GOFILES=$(TARG).go
 
 include $(GOROOT)/src/Make.cmd
+
+test: $(TARG)
+	./$(TARG) < sample.txt
