--- a/SavingTheUniverse/Makefile
+++ b/SavingTheUniverse/Makefile
@@ -1,9 +1,5 @@
-include $(GOROOT)/src/Make.inc
+include ../Make.inc
 
-TARG=SavingTheUniverse
-GOFILES=$(TARG).go
+GOFILES=SavingTheUniverse.go
 
 include $(GOROOT)/src/Make.cmd
-
-test: $(TARG)
-	./$(TARG) < sample.txt
