--- a/FileFixit/Makefile
+++ b/FileFixit/Makefile
@@ -1,9 +1,5 @@
-include $(GOROOT)/src/Make.inc
+include ../Make.inc
 
-TARG=FileFixit
-GOFILES=$(TARG).go
+GOFILES=FileFixit.go
 
 include $(GOROOT)/src/Make.cmd
-
-test: $(TARG)
-	./$(TARG) < sample.txt
