--- a/StoreCredit/Makefile
+++ b/StoreCredit/Makefile
@@ -1,9 +1,5 @@
-include $(GOROOT)/src/Make.inc
+include ../Make.inc
 
-TARG=StoreCredit
 GOFILES=StoreCredit.go
 
 include $(GOROOT)/src/Make.cmd
-
-test: $(TARG)
-	./$(TARG) < sample.txt
